fix: gradient text on safari

--- a/public/style/global.css
+++ b/public/style/global.css
@@ -34,7 +34,7 @@ body {
   padding: 0 0.6rem;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   body {
     background: #111827;
     color: #fff;
@@ -42,7 +42,7 @@ body {
   :root {
     --color-light: #1f2937;
   }
-}
+} */
 a {
   color: inherit;
 }
